# yata

./: .gitignore  CMakeLists.txt  README.md  cmsbuild.sh  cmsinstall.sh  cp2vm370.bat  history.txt  make.exec  release-instructions.txt  spltcon.c  yata.c
.github/workflows/: build.yml  ccpp.yml
Trash/: Makefile
cmakespltcon/: CMakeLists.txt
test/: archive.yata  test1.exec  test2.exec  test3.exec  test4.exec  yata.txt
